done menu (js + css)

--- a/menu.html
+++ b/menu.html
@@ -137,22 +137,8 @@
           </button>
         </div>
       </div>
-      <!-- <div class="container">
-        <div class="filterDiv fastfood">BMW</div>
-        <div class="filterDiv fastfood snack">Orange</div>
-        <div class="filterDiv cake">Volvo</div>
-        <div class="filterDiv fastfood">Red</div>
-        <div class="filterDiv cocktail">Ford</div>
-        <div class="filterDiv cocktail">Blue</div>
-        <div class="filterDiv coffee">Cat</div>
-        <div class="filterDiv fastfood">Dog</div>
-        <div class="filterDiv cake">Melon</div>
-        <div class="filterDiv cocktail cake">Kiwi</div>
-        <div class="filterDiv snack">Banana</div>
-        <div class="filterDiv snack">Lemon</div>
-        <div class="filterDiv cake">Cow</div>
-      </div> -->
-      <div class="menu">
+
+      <!-- <div class="menu">
         <div class="row all">
           <div class="col-4 coffee filterDiv">
             <img
@@ -305,8 +291,157 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
+      <div class="menu">
+        <div class="item-menu coffee filterDiv">
+          <img
+            src="https://assets.website-files.com/613206902d91d80042c2fb56/614852cdf0a64ebd600dbcb1_Drp%20Coffee.jpg"
+            alt=""
+          />
+          <div class="title">
+            <div class="text">
+              <span>Drp Coffee</span>
+            </div>
+            <div class="price">$ 8.85</div>
+          </div>
+        </div>
+        <div class="item-menu cake filterDiv">
+          <img
+            src="https://assets.website-files.com/613206902d91d80042c2fb56/613207b2f568ed88e55dd71d_Choco%20Cup%20Cake-p-800.jpeg"
+            alt=""
+          />
+          <div class="title">
+            <div class="text">
+              <span>Choco Cup Cake</span>
+            </div>
+            <div class="price">$ 4.85</div>
+          </div>
+        </div>
+        <div class="item-menu fastfood filterDiv">
+          <img
+            src="https://assets.website-files.com/613206902d91d80042c2fb56/613207cda690ee3e96586d69_Chicken%20Burger-p-500.jpeg"
+            alt=""
+          />
+          <div class="title">
+            <div class="text">
+              <span>Chicken Burger</span>
+            </div>
+            <div class="price">$ 8.85</div>
+          </div>
+        </div>
+
+        <div class="item-menu snack filterDiv">
+          <img
+            src="https://assets.website-files.com/613206902d91d80042c2fb56/614853716cd88ba6cccaec5a_French%20Fries.jpg"
+            alt=""
+          />
+          <div class="title">
+            <div class="text">
+              <span>French Fries</span>
+            </div>
+            <div class="price">$ 7.85</div>
+          </div>
+        </div>
+        <div class="item-menu fastfood filterDiv">
+          <img
+            src="https://assets.website-files.com/613206902d91d80042c2fb56/61320868d88ba2443c8656ec_Sandwich.jpg"
+            alt=""
+          />
+          <div class="title">
+            <div class="text">
+              <span>Sandwich</span>
+            </div>
+            <div class="price">$ 3.97</div>
+          </div>
+        </div>
+        <div class="item-menu fastfood filterDiv">
+          <img
+            src="https://assets.website-files.com/613206902d91d80042c2fb56/6132088857e0dd758acd88e6_Chinese%20Soup.jpg"
+            alt=""
+          />
+          <div class="title">
+            <div class="text">
+              <span>Chinese Soup</span>
+            </div>
+            <div class="price">$ 8.85</div>
+          </div>
+        </div>
+
+        <div class="item-menu cake filterDiv">
+          <img
+            src="https://assets.website-files.com/613206902d91d80042c2fb56/613208a4f568ed3ae55ddbac_Quafe%20Brade.jpg"
+            alt=""
+          />
+          <div class="title">
+            <div class="text">
+              <span>Quafe Brade</span>
+            </div>
+            <div class="price">$ 8.85</div>
+          </div>
+        </div>
+        <div class="item-menu coffee filterDiv">
+          <img
+            src="https://assets.website-files.com/613206902d91d80042c2fb56/613208bed39ff94235e3451e_Dalgona%20Coffee-p-800.jpeg"
+            alt=""
+          />
+          <div class="title">
+            <div class="text">
+              <span>Dalgona Coffee</span>
+            </div>
+            <div class="price">$ 4.85</div>
+          </div>
+        </div>
+        <div class="item-menu fastfood filterDiv">
+          <img
+            src="https://assets.website-files.com/613206902d91d80042c2fb56/613208dc0d4b09303afb27a2_Chowmin%20Noodle-p-500.jpeg"
+            alt=""
+          />
+          <div class="title">
+            <div class="text">
+              <span>Chowmin Noodle</span>
+            </div>
+            <div class="price">$ 8.85</div>
+          </div>
+        </div>
+
+        <div class="item-menu cocktail filterDiv">
+          <img
+            src="https://assets.website-files.com/613206902d91d80042c2fb56/613208fbad81a85ca0ade9e2_Coka%20Cola.jpg"
+            alt=""
+          />
+          <div class="title">
+            <div class="text">
+              <span>Cola</span>
+            </div>
+            <div class="price">$ 7.85</div>
+          </div>
+        </div>
+        <div class="item-menu fastfood filterDiv">
+          <img
+            src="https://assets.website-files.com/613206902d91d80042c2fb56/6132091ab59938cbf543a428_Fruit%20Salad-p-800.jpeg"
+            alt=""
+          />
+          <div class="title">
+            <div class="text">
+              <span>Fruit Salad</span>
+            </div>
+            <div class="price">$ 3.97</div>
+          </div>
+        </div>
+        <div class="item-menu cocktail filterDiv">
+          <img
+            src="https://assets.website-files.com/613206902d91d80042c2fb56/613209330002244e49a6ae4b_Cocktail.jpg"
+            alt=""
+          />
+          <div class="title">
+            <div class="text">
+              <span>Cocktail</span>
+            </div>
+            <div class="price">$ 8.85</div>
+          </div>
+        </div>
+      </div>
       <div class="btn">
         <button>View Menu <i class="bi bi-arrow-right"></i></button>
       </div>
