update res menu

--- a/menu.html
+++ b/menu.html
@@ -57,7 +57,7 @@
             <i class="bi bi-list"></i>
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Home</a>
+            <a class="dropdown-item" href="index.html">Home</a>
             <a class="dropdown-item" href="menu.html">Menu</a>
 
             <a class="dropdown-item" href="#">About Us</a>
@@ -69,7 +69,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
 
             <li class="nav-item">
