update know more page

--- a/know-more.html
+++ b/know-more.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Menu</title>
+    <title>Know more</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -96,53 +96,124 @@
 
     <!-- Container -->
     <div class="know-more container">
-        <div class="left">
-          <div class="top">
-            <span>KNOW MORE ABOUT US </span>
-            <div class="line"></div>
-          </div>
-          <h1>We source sustainable & line caught Foods</h1>
-          <p>
-            Edit this text to make it your own. To edit, simply click directly
-            on the text to start adding your own words. You can move the text by
-            dragging and dropping the text anywhere on the page.
-          </p>
-          <div class="mid">
-            <div class="item">
-              <h3><i class="bi bi-bar-chart-line-fill"></i> 10+ People</h3>
-              <span>We are Small Team</span>
-              <p>
-                Through True Rich Attended does no end it his mother since
-                favourable.
-              </p>
-            </div>
-            <div class="item">
-              <h3><i class="bi bi-bar-chart-line-fill"></i> 2014</h3>
-              <span>We are From</span>
-              <p>
-                Through True Rich Attended does no end it his mother since
-                favourable.
-              </p>
-            </div>
-            <div class="item">
-              <h3><i class="bi bi-bar-chart-line-fill"></i> 200k</h3>
-              <span>We Served</span>
-              <p>
-                Through True Rich Attended does no end it his mother since
-                favourable.
-              </p>
-            </div>
-          </div>
-          <div class="btn">
-            <button>View Menu <i class="bi bi-arrow-right"></i></button>
-          </div>
+      <div class="left">
+        <div class="top">
+          <span>KNOW MORE ABOUT US </span>
+          <div class="line"></div>
         </div>
-        <div class="right">
-          <img src="Know more Image 1.png" class="special" alt="" />
-          <img src="Know more Image 2.png" alt="" />
+        <h1>We source sustainable & line caught Foods</h1>
+        <p>
+          Edit this text to make it your own. To edit, simply click directly on
+          the text to start adding your own words. You can move the text by
+          dragging and dropping the text anywhere on the page.
+        </p>
+        <div class="mid">
+          <div class="item">
+            <h3><i class="bi bi-bar-chart-line-fill"></i> 10+ People</h3>
+            <span>We are Small Team</span>
+            <p>
+              Through True Rich Attended does no end it his mother since
+              favourable.
+            </p>
+          </div>
+          <div class="item">
+            <h3><i class="bi bi-bar-chart-line-fill"></i> 2014</h3>
+            <span>We are From</span>
+            <p>
+              Through True Rich Attended does no end it his mother since
+              favourable.
+            </p>
+          </div>
+          <div class="item">
+            <h3><i class="bi bi-bar-chart-line-fill"></i> 200k</h3>
+            <span>We Served</span>
+            <p>
+              Through True Rich Attended does no end it his mother since
+              favourable.
+            </p>
+          </div>
         </div>
       </div>
+      <div class="right">
+        <img src="Know more Image 3.png" class="special" alt="" />
+        <img src="Know more Image 4.png" alt="" />
+      </div>
+    </div>
 
+    <!-- mid-container -->
+    <div class="mid-container container">
+      <div class="best-coffee">
+        <div class="image">
+          <div class="text">
+            <h1>One of the best Cafes in <span>New York</span></h1>
+            <p>
+              Through True Rich Attended does no end it his mother since
+              favourable real had half every him case in packages enquire we up
+              ecstatic.. Through True Rich Attended does no end it his mother
+            </p>
+          </div>
+          <div class="overlay"><img src="BG Overlay.png" alt=""></div>
+          <img src="Know more image 5.png" alt="" />
+        </div>
+      </div>
+      <div class="history">
+        <div class="top"><h1>Our History</h1></div>
+        <div class="menu-history">
+          <div class="item-menu">
+            <div class="line">
+              <div class="line-dot"></div>
+            </div>
+            <div class="text">
+              <h3>1998</h3>
+              <span>Milestone One</span>
+              <p>
+                Through True Rich Attended does no end it his mother since
+                favourable
+              </p>
+            </div>
+          </div>
+          <div class="item-menu">
+            <div class="line">
+              <div class="line-dot"></div>
+            </div>
+            <div class="text">
+              <h3>2005</h3>
+              <span>Milestone Two</span>
+              <p>
+                Through True Rich Attended does no end it his mother since
+                favourable
+              </p>
+            </div>
+          </div>
+          <div class="item-menu">
+            <div class="line">
+              <div class="line-dot"></div>
+            </div>
+            <div class="text">
+              <h3>2012</h3>
+              <span>Milestone Three</span>
+              <p>
+                Through True Rich Attended does no end it his mother since
+                favourable
+              </p>
+            </div>
+          </div>
+          <div class="item-menu">
+            <div class="line">
+              <div class="line-dot"></div>
+            </div>
+            <div class="text">
+              <h3>2021</h3>
+              <span>Milestone Four</span>
+              <p>
+                Through True Rich Attended does no end it his mother since
+                favourable
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="map container">
       <div class="left">
         <h3>Working Hours</h3>
