--- a/know-more.html
+++ b/know-more.html
@@ -152,7 +152,7 @@
               ecstatic.. Through True Rich Attended does no end it his mother
             </p>
           </div>
-          <div class="overlay"><img src="BG Overlay.png" alt=""></div>
+          <div class="overlay"><img src="BG Overlay.png" alt="" /></div>
           <img src="Know more image 5.png" alt="" />
         </div>
       </div>
@@ -212,6 +212,25 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div class="footer-container container">
+      <div class="left"><h1>Things our company stands for</h1></div>
+      <div class="right">
+        <h2>
+          Edit this text to make it your own. To edit, simply click directly
+        </h2>
+        <p>
+          Writing UX copies can be a little frustrating and confusing, and
+          sometimes we are unsure about how to get the right word. To crack the
+          code for the UX copies, we at Zeta Design wanted to build a Figma
+          plugin for the larger design community. The plugin is called the Ghost
+          UXWriter and has a set of UX copies cataloged and categorized with a
+          voice and tone variation ranging from plain, casual to playful. The
+          intention to build this Figma plugin originated from our Medium blog
+          post, ‘Designing voice and tone for error messages.
+        </p>
       </div>
     </div>
     <div class="map container">
