done our-story page

--- a/our-story.html
+++ b/our-story.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Know more</title>
+    <title>Our Story</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -32,7 +32,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="know-more.css" />
+    <link rel="stylesheet" href="our-story.css" />
     <!-- <link rel="stylesheet" href="./css/style.css" /> -->
   </head>
   <body>
@@ -95,132 +95,23 @@
     </nav>
 
     <!-- Container -->
-    <div class="know-more container">
+    <div class="our-story container">
       <div class="left">
-        <div class="top">
-          <span>KNOW MORE ABOUT US </span>
-          <div class="line"></div>
+        <div class="text">
+          <h1>Our Story</h1>
+          <p>
+            Through True Rich Attended does no end it his mother since
+            favourable real had half every him case in packages enquire we up
+            ecstatic
+          </p>
         </div>
-        <h1>We source sustainable & line caught Foods</h1>
-        <p>
-          Edit this text to make it your own. To edit, simply click directly on
-          the text to start adding your own words. You can move the text by
-          dragging and dropping the text anywhere on the page.
-        </p>
-        <div class="mid">
-          <div class="item">
-            <h3><i class="bi bi-bar-chart-line-fill"></i> 10+ People</h3>
-            <span>We are Small Team</span>
-            <p>
-              Through True Rich Attended does no end it his mother since
-              favourable.
-            </p>
-          </div>
-          <div class="item">
-            <h3><i class="bi bi-bar-chart-line-fill"></i> 2014</h3>
-            <span>We are From</span>
-            <p>
-              Through True Rich Attended does no end it his mother since
-              favourable.
-            </p>
-          </div>
-          <div class="item">
-            <h3><i class="bi bi-bar-chart-line-fill"></i> 200k</h3>
-            <span>We Served</span>
-            <p>
-              Through True Rich Attended does no end it his mother since
-              favourable.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="right">
-        <img src="Know more Image 3.png" class="special" alt="" />
-        <img src="Know more Image 4.png" alt="" />
-      </div>
-    </div>
-
-    <!-- mid-container -->
-    <div class="mid-container container">
-      <div class="best-coffee">
         <div class="image">
-          <div class="text">
-            <h1>One of the best Cafes in <span>New York</span></h1>
-            <p>
-              Through True Rich Attended does no end it his mother since
-              favourable real had half every him case in packages enquire we up
-              ecstatic.. Through True Rich Attended does no end it his mother
-            </p>
-          </div>
-          <div class="overlay"><img src="BG Overlay.png" alt="" /></div>
-          <img src="Know more image 5.png" alt="" />
+          <img src="Our story image 1.png" class="special" alt="" />
+          <img src="Our story image 2.png" alt="" />
         </div>
       </div>
-      <div class="history">
-        <div class="top"><h1>Our History</h1></div>
-        <div class="menu-history">
-          <div class="item-menu">
-            <div class="line">
-              <div class="line-dot"></div>
-            </div>
-            <div class="text">
-              <h3>1998</h3>
-              <span>Milestone One</span>
-              <p>
-                Through True Rich Attended does no end it his mother since
-                favourable
-              </p>
-            </div>
-          </div>
-          <div class="item-menu">
-            <div class="line">
-              <div class="line-dot"></div>
-            </div>
-            <div class="text">
-              <h3>2005</h3>
-              <span>Milestone Two</span>
-              <p>
-                Through True Rich Attended does no end it his mother since
-                favourable
-              </p>
-            </div>
-          </div>
-          <div class="item-menu">
-            <div class="line">
-              <div class="line-dot"></div>
-            </div>
-            <div class="text">
-              <h3>2012</h3>
-              <span>Milestone Three</span>
-              <p>
-                Through True Rich Attended does no end it his mother since
-                favourable
-              </p>
-            </div>
-          </div>
-          <div class="item-menu">
-            <div class="line">
-              <div class="line-dot"></div>
-            </div>
-            <div class="text">
-              <h3>2021</h3>
-              <span>Milestone Four</span>
-              <p>
-                Through True Rich Attended does no end it his mother since
-                favourable
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="footer-container container">
-      <div class="left"><h1>Things our company stands for</h1></div>
       <div class="right">
-        <h2>
-          Edit this text to make it your own. To edit, simply click directly
-        </h2>
+        <h3>One of the best cafes in <span>New York.</span></h3>
         <p>
           Writing UX copies can be a little frustrating and confusing, and
           sometimes we are unsure about how to get the right word. To crack the
@@ -231,8 +122,20 @@
           intention to build this Figma plugin originated from our Medium blog
           post, ‘Designing voice and tone for error messages.
         </p>
+        <p>
+          Writing UX copies can be a little frustrating and confusing, and
+          sometimes we are unsure about how to get the right word. To crack the
+          code for the UX copies, we at Zeta Design wanted to build a Figma
+          plugin for the larger design community. The plugin is called the Ghost
+          UXWriter and has a set of UX copies cataloged and categorized with a
+          voice and tone variation ranging from plain, casual to playful. The
+          intention to build this Figma plugin originated from our Medium blog
+          post, ‘Designing voice.
+        </p>
       </div>
     </div>
+
+
     <div class="map container">
       <div class="left">
         <h3>Working Hours</h3>
