--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             <a class="dropdown-item" href="#">Home</a>
             <a class="dropdown-item" href="menu.html">Menu</a>
             <a class="dropdown-item" href="know-more.html">About Us</a>
-            <a class="dropdown-item" href="#">Our Story</a>
-            <a class="dropdown-item" href="#">Blog</a>
-            <a class="dropdown-item" href="#">Contact</a>
+            <a class="dropdown-item" href="our-story.html">Our Story</a>
+            <a class="dropdown-item" href="blog.html">Blog</a>
+            <a class="dropdown-item" href="contact.html">Contact</a>
           </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -78,13 +78,13 @@
               <a class="nav-link" href="know-more.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Our Story</a>
+              <a class="nav-link" href="our-story.html">Our Story</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Blog</a>
+              <a class="nav-link" href="blog.html">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
           <button class="clone-btn">
