--- a/blog-inner.html
+++ b/blog-inner.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blogs</title>
+    <title>Blog inner page</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -32,7 +32,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="blog.css" />
+    <link rel="stylesheet" href="blog-inner.css" />
     <!-- <link rel="stylesheet" href="./css/style.css" /> -->
   </head>
   <body>
@@ -95,178 +95,19 @@
     </nav>
 
     <!-- Container -->
-    <div class="title-container container">
-      <h1>Featured Blogs</h1>
-    </div>
-    <div class="blog container">
-      <div class="left">
-        <div class="text">
-          <div class="wrap">
-            <h1>A guide to Thai curries</h1>
-            <div class="bottom">
-              <div class="left">
-                <div class="user">
-                  <div class="avatar">
-                    <img
-                      src="Ellipse 150.png"
-                      alt=""
-                    />
-                  </div>
-                  <div class="user-infor">
-                    <h5>Andrew Johnson</h5>
-                    <p>27th January 2021</p>
-                  </div>
-                </div>
-              </div>
-              <div class="right">
-                <a href="#">Read more <i class="bi bi-arrow-right"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="trending">
-          <span>TRENDING</span>
-        </div>
-
-        <div class="image">
-          <div class="overlay">
-            <img src="blog image overlay.png" alt="" />
-          </div>
-          <img src="blog image bg.png" alt="" />
-        </div>
+    <div class="user container">
+      <div class="avatar">
+        <img src="Ellipse 150.png" alt="" />
       </div>
-      <div class="right">
-        <div class="blog-item">
-          <div class="image"><img src="blog image 1.png" alt="" /></div>
-          <div class="text">
-            <h4>You can move the text by dragging and dropping the text</h4>
-            <p>
-              Writing UX copies can be a little frustrating and confusing, and
-              sometimes.
-            </p>
-          </div>
-        </div>
-        <div class="blog-item">
-          <div class="image"><img src="blog image 2.png" alt="" /></div>
-
-          <div class="text">
-            <h4>Edit this text to make it your own. To edit, simply</h4>
-            <p>
-              Writing UX copies can be a little frustrating and confusing, and
-              sometimes.
-            </p>
-          </div>
-        </div>
-        <div class="blog-item">
-          <div class="image"><img src="blog image 3.png" alt="" /></div>
-
-          <div class="text">
-            <h4>You can move the text by dragging and dropping the text</h4>
-            <p>
-              Writing UX copies can be a little frustrating and confusing, and
-              sometimes.
-            </p>
-          </div>
-        </div>
+      <div class="user-infor">
+        <h5>Andrew Johnson</h5>
+        <p>27th January 2021</p>
       </div>
     </div>
     <div class="title-container container">
-      <h1>All Articles</h1>
+      <h3>How to store Tomatoes (and Whether to Refrigerate Them)</h3>
     </div>
-    <div class="articles container">
-      <div class="article-item">
-        <div class="left">
-          <img src="article image 1.png" alt="" />
-        </div>
-        <div class="right">
-          <div class="wrap">
-            <div class="user">
-              <div class="avatar">
-                <img
-                  src="Ellipse 150.png"
-                  alt=""
-                />
-              </div>
-              <div class="user-infor">
-                <h5>Andrew Johnson</h5>
-                <p>27th January 2021</p>
-              </div>
-            </div>
-            <h5>The best guacamole recipe with only 4 ingredients</h5>
-            <a href="#">Read more <i class="bi bi-arrow-right"></i></a>
-          </div>
-        </div>
-      </div>
-      <div class="article-item">
-        <div class="left">
-          <img src="article image 2.png" alt="" />
-        </div>
-        <div class="right">
-          <div class="wrap">
-            <div class="user">
-              <div class="avatar">
-                <img
-                  src="Ellipse 150.png"
-                  alt=""
-                />
-              </div>
-              <div class="user-infor">
-                <h5>Andrew Johnson</h5>
-                <p>27th January 2021</p>
-              </div>
-            </div>
-            <h5>How to store Tomatoes (and Whether to Refrigerate Them)</h5>
-            <a href="#">Read more <i class="bi bi-arrow-right"></i></a>
-          </div>
-        </div>
-      </div>
-      <div class="article-item">
-        <div class="left">
-          <img src="article image 3.png" alt="" />
-        </div>
-        <div class="right">
-          <div class="wrap">
-            <div class="user">
-              <div class="avatar">
-                <img
-                  src="Ellipse 150.png"
-                  alt=""
-                />
-              </div>
-              <div class="user-infor">
-                <h5>Andrew Johnson</h5>
-                <p>27th January 2021</p>
-              </div>
-            </div>
-            <h5>The Absolute Best Way to Cook French Fries</h5>
-            <a href="#">Read more <i class="bi bi-arrow-right"></i></a>
-          </div>
-        </div>
-      </div>
-      <div class="article-item">
-        <div class="left">
-          <img src="article image 4.png" alt="" />
-        </div>
-        <div class="right">
-          <div class="wrap">
-            <div class="user">
-              <div class="avatar">
-                <img
-                  src="Ellipse 150.png"
-                  alt=""
-                />
-              </div>
-              <div class="user-infor">
-                <h5>Andrew Johnson</h5>
-                <p>27th January 2021</p>
-              </div>
-            </div>
-            <h5>A guide to Thai Curry</h5>
-            <a href="#">Read more <i class="bi bi-arrow-right"></i></a>
-          </div>
-        </div>
-      </div>
-    </div>
+
     <div class="map container">
       <div class="left">
         <h3>Working Hours</h3>
