--- a/blog-inner.html
+++ b/blog-inner.html
@@ -101,11 +101,90 @@
       </div>
       <div class="user-infor">
         <h5>Andrew Johnson</h5>
-        <p>27th January 2021</p>
+        <p>Posted on 27th January 2021</p>
       </div>
     </div>
+
+    <div class="line-top container"></div>
+
     <div class="title-container container">
       <h3>How to store Tomatoes (and Whether to Refrigerate Them)</h3>
+    </div>
+
+    <div class="inner-blog container">
+      <img src="Blog inner Image.png" alt="" />
+      <div class="wrap">
+        <div class="text">
+          <h3>
+            Edit this text to make it your own. To edit, simply click directly
+            on the text.
+          </h3>
+          <p>
+            Writing UX copies can be a little frustrating and confusing, and
+            sometimes we are unsure about how to get the right word. To crack
+            the code for the UX copies, we at Zeta Design wanted to build a
+            Figma plugin for the larger design community. The plugin is called
+            the Ghost UXWriter and has a set of UX copies cataloged and
+            categorized with a voice and tone variation ranging from plain,
+            casual to playful. The intention to build this Figma plugin
+            originated from our Medium blog post, ‘Designing voice and tone for
+            error messages.
+          </p>
+          <p>
+            Writing UX copies can be a little frustrating and confusing, and
+            sometimes we are unsure about how to get the right word. To crack
+            the code for the UX copies, we at Zeta Design wanted to build a
+            Figma plugin for the larger design community. The plugin is called
+            the Ghost UXWriter and has a set of UX copies cataloged.
+          </p>
+          <p>
+            Writing UX copies can be a little frustrating and confusing, and
+            sometimes we are unsure about how to get the right word. To crack
+            the code for the UX copies, we at Zeta Design wanted to build a
+            Figma plugin for the larger design community. The plugin is called
+            the Ghost UXWriter and has a set of UX copies cataloged.
+          </p>
+          <p>
+            Writing UX copies can be a little frustrating and confusing, and
+            sometimes we are unsure about how to get the right word. To crack
+            the code for the UX copies, we at Zeta Design wanted to build a
+            Figma plugin for the larger design community. The plugin is called
+            the Ghost UXWriter and has a set of UX copies cataloged and
+            categorized with a voice and tone variation ranging from plain,
+            casual to playful. The intention to build this Figma plugin
+            originated from our Medium blog post, ‘Designing voice.
+          </p>
+          <h5>
+            Transform Your Idea Into Reality with Ether a Leading Digital Agency
+          </h5>
+          <p>
+            Step 1: Download the plugin from Figma community, search Ghost
+            UXWriter <br />
+            Step 2: Open the plugin on your artboard <br />
+            Step 3: Search for your copy or look through the different
+            categories of the copies <br />
+            Step 4: Select the type of error you are looking for. You will get
+            three different copies for each error <br />
+            Step 5: Tap on the cards to insert text in your frames And you are
+            all geared up to make your UX copies more fun and exciting <br />
+          </p>
+          <h3>
+            Your own words. You can move the text by dragging and dropping the
+            text anywhere on the page.
+          </h3>
+          <p>
+            Writing UX copies can be a little frustrating and confusing, and
+            sometimes we are unsure about how to get the right word. To crack
+            the code for the UX copies, we at Zeta Design wanted to build a
+            Figma plugin for the larger design community. The plugin is called
+            the Ghost UXWriter and has a set of UX copies cataloged and
+            categorized with a voice and tone variation ranging from plain,
+            casual to playful. The intention to build this Figma plugin
+            originated from our Medium blog post, ‘Designing voice and tone for
+            error messages.
+          </p>
+        </div>
+      </div>
     </div>
 
     <div class="map container">
