done contact page

--- a/blog.html
+++ b/blog.html
@@ -102,7 +102,7 @@
       <div class="left">
         <div class="text">
           <div class="wrap">
-            <h1>A guide to Thai curries</h1>
+            <h1 href="#">A guide to Thai curries</h1>
             <div class="bottom">
               <div class="left">
                 <div class="user">
