--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="https://www.youtube.com/iframe_api"></script>
     <!-- <link rel="stylesheet" href="./css/style.css" /> -->
   </head>
   <body>
@@ -364,8 +366,8 @@
         <div class="left">
           <h1>''</h1>
           <span
-            >Edit this text to make it your own. To edit, simply click directly on
-            the text to start adding your own words. You can move the text by
+            >Edit this text to make it your own. To edit, simply click directly
+            on the text to start adding your own words. You can move the text by
             dragging and dropping the text
           </span>
           <div class="author">
@@ -386,13 +388,40 @@
         </div>
         <div class="right">
           <img
+            class="bg image"
             src="https://assets.website-files.com/60ffe51e69f4b35fb7bffc4c/6138c6ed8486d824ec233481_video-testimonial-placeholder-p-1080.jpeg"
             alt=""
           />
-          <i class="bi bi-play-fill"></i>
+
+          <iframe
+            class="embed-responsive-item"
+            id="myVideo"
+            src="https://www.youtube.com/embed/And-D95JXhQ?autoplay=1&mute=1&enablejsapi=1&controls=0&loop=1&playsinline=1&color=white&rel=0&cc_load_policy=1&playlist=And-D95JXhQ"
+            allowfullscreen
+          >
+          </iframe>
+          <!-- <div
+            class="video position-relative embed-responsive embed-responsive-16by9"
+          >
+            <div id="vid-bg" class="video-background">
+              <img
+                class="bg"
+                src="https://assets.website-files.com/60ffe51e69f4b35fb7bffc4c/6138c6ed8486d824ec233481_video-testimonial-placeholder-p-1080.jpeg"
+                alt="Background Image"
+                style="object-fit: cover; width: 100%; height: 100%"
+              />
+
+            </div>
+            <iframe
+              id="myVideo"
+              class="embed-responsive-item min-vh-100 min-vw-100"
+              src="https://www.youtube.com/embed/And-D95JXhQ?autoplay=1&mute=1&enablejsapi=1&controls=0&loop=1&playsinline=1&color=white&rel=0&cc_load_policy=1&playlist=And-D95JXhQ"
+              allowfullscreen
+            ></iframe>
+          </div> -->
+          <i class="play-button bi bi-play-fill" id="play"></i>
         </div>
       </div>
-
     </div>
 
     <div class="blog container">
@@ -506,6 +535,7 @@
     <!--  -->
 
     <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="StatusChangeHomePage.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqQVjuk3Enj20UZ_9QY4YUmrq_Q9OA8cQ&callback=myMap"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
