--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
           <iframe
             class="embed-responsive-item"
             id="myVideo"
-            src="https://www.youtube.com/embed/And-D95JXhQ?autoplay=1&mute=1&enablejsapi=1&controls=0&loop=1&playsinline=1&color=white&rel=0&cc_load_policy=1&playlist=And-D95JXhQ"
+            src="https://www.youtube.com/embed/And-D95JXhQ?mute=1&enablejsapi=1&controls=0&loop=1&playsinline=1&color=white&rel=0&cc_load_policy=1&playlist=And-D95JXhQ"
             allowfullscreen
           >
           </iframe>
