--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
           <i class="play-button bi bi-play-fill" id="play"></i>
         </div>
       </div>
-    </div>
+    </div>impact parade program cool stamp stock awake layer puppy cause alter arena
 
     <div class="blog container">
       <h1>Read Our Latest Blogs</h1>
