--- a/blog.html
+++ b/blog.html
@@ -119,7 +119,7 @@
                 </div>
               </div>
               <div class="right">
-                <a href="#">Read more <i class="bi bi-arrow-right"></i></a>
+                <a href="blog-inner.html">Read more <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div>
