--- a/know-more.html
+++ b/know-more.html
@@ -153,7 +153,7 @@
             </p>
           </div>
           <div class="overlay"><img src="BG Overlay.png" alt="" /></div>
-          <img src="Know more image 5.png" alt="" />
+          <img src="https://assets.website-files.com/60ffe51e69f4b35fb7bffc4c/6138d1ccb1c5d50c717b1817_About-3.jpg" alt="" />
         </div>
       </div>
       <div class="history">
